# SchoolHealth

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
school_health/: hooks.py  modules.txt  patches.txt
school_health/config/: desktop.py
school_health/patches/v0_1/: backfill_student_names.py  import_legacy_health_data.py  import_legacy_health_data_after_module_fix.py
school_health/role/school_health_manager/: school_health_manager.json
school_health/role/school_nurse/: school_nurse.json
school_health/school_health/: utils.py
school_health/school_health/dashboard_chart/health_incidents_by_location/: health_incidents_by_location.json
school_health/school_health/dashboard_chart/health_incidents_by_severity/: health_incidents_by_severity.json
school_health/school_health/dashboard_chart/monthly_health_incidents/: monthly_health_incidents.json
school_health/school_health/doctype/health_incident_symptom/: health_incident_symptom.json  health_incident_symptom.py
school_health/school_health/doctype/health_symptom/: health_symptom.json  health_symptom.py
school_health/school_health/doctype/school_health_incident/: school_health_incident.js  school_health_incident.json  school_health_incident.py
school_health/school_health/doctype/student_health_profile/: student_health_profile.json  student_health_profile.py
school_health/school_health/number_card/guardians_notified/: guardians_notified.json
school_health/school_health/number_card/open_health_follow_ups/: open_health_follow_ups.json
school_health/tests/: test_utils.py
(+12 files in other folders)
